@@ -1,7 +1,7 @@
 package net.loveruby.cflat.asm;
 
 abstract public class AsmOperand {
-    abstract public String toString();
+    abstract public String toSource();
 
     public boolean isMemoryReference() {
         return false;
