@@ -1,4 +1,5 @@
 package net.loveruby.cflat.asm;
 
 abstract public class Literal {
+    abstract public String toSource();
 }
