@@ -1,3 +1,7 @@
+Tue Sep 16 03:23:49 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/asm: toString -> toSource.
+
 Tue Sep 16 03:12:41 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/asm/Literal.java: does not inherit
